@@ -28,10 +28,11 @@ requires 'Path::Class'               => 0;
 # Perl 5.8.0 doesn't have utf8::is_utf8()
 requires 'Encode'                    => 0 if ($] <= 5.008000);  
 
-build_requires 'DBD::SQLite'         => 1.13;
-build_requires 'Test::Builder'       => 0.33;
-build_requires 'Test::Warn'          => 0.08;
-build_requires 'Test::NoWarnings'    => 0.08;
+test_requires 'DBD::SQLite'         => 1.13;
+test_requires 'Test::Builder'       => 0.33;
+test_requires 'Test::Warn'          => 0.08;
+test_requires 'Test::NoWarnings'    => 0.08;
+test_requires 'Test::Exception'     => 0;
 
 install_script 'script/dbicadmin';
 
